# go-multi-module-ci-cd

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  a.sh  go.work
.github/workflows/: auto-build.yaml  auto-tag-packages.yaml  build-and-commit-packages.yaml  check-build.yaml  ci-cd.yaml  sync-dependencies.yaml  update-and-commit-service-deps.yaml
services/resource/: BUILD.bazel  go.mod  go.sum  main.go
services/resource/entity/: BUILD.bazel  entity.go
services/user/: BUILD.bazel  go.mod  go.sum  main.go
