load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "resource_lib",
    srcs = ["main.go"],
    importpath = "github.com/harsh-2711/go-multi-module-ci-cd/services/resource",
    visibility = ["//visibility:private"],
    deps = ["//packages/odd"],
)

go_binary(
    name = "resource",
    embed = [":resource_lib"],
    visibility = ["//visibility:public"],
)
